Fix spacing styles for intake add issues modal

--- a/client/app/styles/_intake.scss
+++ b/client/app/styles/_intake.scss
@@ -64,6 +64,15 @@
   width: 750px;
   max-height: 95%;
 
+  h1 {
+    text-align: center;
+    border-bottom: 1px solid $color-gray-lighter;
+  }
+
+  h2 {
+    margin-bottom: 10px;
+  }
+
   @media only screen and (max-width: 760px) {
     width: 650px;
 
@@ -178,6 +187,6 @@
   }
 
   p {
-    margin: .5rem;
+    margin: .5rem 0;
   }
 }
